2000-07-28  Bruno Haible  <haible@clisp.cons.org>

	Simplification: In all cases where $(gnulocaledir) is used, it is
	identical to $(localedir).
	* Makefile.in.in (install, uninstall): Use $(localedir) instead of
	$(gnulocaledir).

1998-07-24  Paul Eggert  <eggert@twinsun.com>

	* Makefile.in.in (cat-id-tbl.o): Depend on
	$(top_srcdir)/intl/libgettext.h, not ../intl/libgettext.h.

1998-07-26  Paul Eggert  <eggert@twinsun.com>

	* Makefile.in.in (maintainer-clean): Remove cat-id-tbl.c and
	stamp-cat-id.

2000-07-28  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in.in (uninstall): Synchronize with the install target.

2000-07-28  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in.in (top_builddir, mkinstalldirs): New macros. Needed
	when configured with --srcdir=<relative pathname>; then ac_aux_dir
	will be a relative pathname rooted at the top builddir, and
	@MKINSTALLDIRS@ likewise.
	(install-data-yes): Use it.

2000-07-26  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in.in (MKINSTALLDIRS): Remove the  $(top_srcdir)/ prefix.
	configure must get this right.
	(install-data-yes): Use $(SHELL) for calling $(MKINSTALLDIRS), don't
	rely on its execution permissions.

	* Makefile.in.in (install, uninstall): Provide DESTDIR support, as
	recommended by GNU standards.
	(uninstall): Remove obsolete po-Makefile.in.in line.

2000-05-06  Ulrich Drepper  <drepper@redhat.com>

	* Makefile.in.in: Handle case where generation of $(PACKAGE).po fails.
	(dist): Run update-po first.

	* POTFILES.in: Replace po-gram.gen.c with po-gram-gen.c.

1998-06-01 21:27  Ulrich Drepper  <drepper@cygnus.com>

	* Makefile.in.in: Allow parallel `make dist' by splitting dependencies
	for `dist'.  Reported by Alexander V. Lukyanov <lav@yars.free.net>.

1998-04-28 18:07  Ulrich Drepper  <drepper@cygnus.com>

	* po/Makefile.in.in: Only try to put newly generated .pot in place
	when the generation succeeded.

1997-09-10 00:30  Ulrich Drepper  <drepper@cygnus.com>
